--- a/css/main.css
+++ b/css/main.css
@@ -824,6 +824,32 @@ header .bottom-menu .item .item__contents .contents__menu>ul>li ul li:hover {
   margin: 0 24px 0 0;
 }
 
+.bank--review .contents:checked+.loading--area {
+  padding: 100px 0;
+  display: block;
+  width: 100%;
+}
+
+.bank--review .review--contents .loading {
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+  border-width: 5px;
+  border-style: solid;
+  border-color: rgb(16, 223, 153) rgb(245, 245, 245) rgb(245, 245, 245);
+  border-image: initial;
+  border-radius: 50%;
+  -webkit-animation:spin 1000ms infinite linear;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  100%{ transform: rotate(360deg); }
+}
+@-webkit-keyframes spin {
+  100%{ -webkit-transform: rotate(360deg); }
+}
+
 .bank--review .review--contents .review--img {
   position: relative;
   display: block;
@@ -949,6 +975,25 @@ header .bottom-menu .item .item__contents .contents__menu>ul>li ul li:hover {
   margin: 0 24px 0 0;
   border-top: 2px solid #f5f5f5;
   padding: 20px 0;
+}
+
+.bank--tip .contents:checked+.loading--area {
+  padding: 100px 0;
+  display: block;
+  width: 100%;
+}
+
+.bank--tip .tip--contents .loading {
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+  border-width: 5px;
+  border-style: solid;
+  border-color: rgb(16, 223, 153) rgb(245, 245, 245) rgb(245, 245, 245);
+  border-image: initial;
+  border-radius: 50%;
+  -webkit-animation:spin 1000ms infinite linear;
+  animation: spin 1s linear infinite;
 }
 
 .bank--tip .tip--contents .tip--img {
@@ -1272,45 +1317,4 @@ footer .footer--bottom {
 
 .footer--bottom .copyright .italic {
   font-style: italic;
-}
-
-/* MEDIA */
-@media (max-width: 820px) {
-  header {
-    width: 820px;
-  }
-
-header .bottom-menu .item .item__contents .contents__menu>ul {
-  left: 0;
-}
-
-  .card .ranking-bg .inner .rank-container {
-    width: 756px !important;
-    padding: 0;
-  }
-
-  .card .ranking-bg .inner .rank-container .swiper {
-    width: calc(100% - 195px);
-  }
-
-  .inner--container .inner {
-    width: 756px;
-  }
-
-  .bank--review .review--contents > li {
-    width: calc(25% - 24px);
-  }
-
-  .bank--review .contents:checked+.review--contents {
-    width: 100%;
-  }
-
-  .bank--tip .tip--contents > li {
-    width: calc(50% - 24px);
-  }
-
-.bank--tip .tip--contents > li:first-child .tip--info,
-.bank--tip .tip--contents > li:nth-child(2) .tip--info {
-  width: calc(100% - 136px);
-}
 }
