--- a/css/main.css
+++ b/css/main.css
@@ -108,6 +108,7 @@ header .inner .header-top .dropdown .material-icons {
   top: 5px;
   left: 138px;
   font-size: 24px;
+  cursor: pointer;
 }
 
 header .inner .header-top .dropdown .dropdown-sub.hide {
@@ -219,7 +220,9 @@ header .bottom-menu {
   display: flex;
 }
 
-header .bottom-menu .item {}
+header .bottom-menu .item {
+  cursor: pointer;
+}
 
 header .bottom-menu .item .item__name {
   padding: 0 16px;
