visual2.png -> visual2.svg

--- a/css/main.css
+++ b/css/main.css
@@ -521,7 +521,7 @@ header .bottom-menu .item .item__contents .contents__menu>ul>li ul li:hover {
   display: block;
   width: 740px;
   height: 444px;
-  background-image: url("../images/visual2.png");
+  background-image: url("../images/visual2.svg");
   background-repeat: no-repeat;
 }
 
