--- a/css/main.css
+++ b/css/main.css
@@ -1183,7 +1183,7 @@ header .bottom-menu .item .item__contents .contents__menu>ul>li ul li:hover {
   color: #5c818a;
   font-size: 14px;
   line-height: 21px;
-  letter-spacing: -1px;
+  letter-spacing: -.5px;
   background-color: #f0f6f8;
   text-align: center;
 }
@@ -1197,8 +1197,7 @@ footer {
   display: block;
   width: 100%;
   padding: 71px 0 88px;
-  background: #34464b;
-  box-shadow: inset 0 -4px 12px 0 rgb(0 0 0 / 34%);
+  background: #fff;
 }
 
 footer .footer--top {
@@ -1210,43 +1209,46 @@ footer .footer--top {
 .footer--top .top--left {
   display: flex;
   flex-direction: column;
+  flex: 1;
 }
 
 .footer--top .top--left .bank--img {
   display: block;
-  width: 170px;
-  height: 35px;
+  width: 207px;
+  height: 34px;
   color: transparent;
   font-size: 0;
-  background-image: url("../images/footer-banklogo.svg");
+  background-image: url("../images/footer_logo.svg");
   background-size: 100%;
   background-repeat: no-repeat;
+  cursor: pointer;
 }
 
 .footer--top .top--left .footer--download {
   display: flex;
   flex-direction: column;
+  text-align: left;
 }
 
 .footer--top .top--left .footer--download .appstore {
   display: block;
-  width: 126px;
-  height: 42px;
-  margin-top: 37px;
+  width: 120px;
+  height: 40px;
+  margin-top: 32px;
   background-image: url("../images/footer-appstore.svg");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 100%;
   background-position: 0;
 }
 
 .footer--top .top--left .footer--download .playstore {
   display: block;
-  width: 126px;
+  width: 135.5px;
   height: 42px;
-  margin-top: 12px;
+  margin-top: 7px;
   background-image: url("../images/footer-playstore.svg");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 100%;
   background-position: 0;
 }
 
@@ -1262,36 +1264,49 @@ footer .footer--top {
 
 .footer--top .top--right {
   display: flex;
-  flex: 2;
+  flex: 1;
 }
 
 .footer--top .top--right .footer--banksalad {
   float: left;
   display: block;
-  width: 50%;
+}
+
+.footer--top .top--right .footer--banksalad:first-child {
+  margin-right: 128px;
 }
 
 .footer--top .top--right .footer--banksalad .top--right--title {
   display: block;
-  margin: 0 0 25px;
-  color: #91b5be;
-  font-size: 16px;
-  font-weight: 500;
+  margin: 0 0 16px;
+  color: #111;
+  font-size: 14px;
+  font-weight: 700;
 }
 
 .footer--top .top--right .footer--banksalad .top--right--sitelink {
   display: block;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 300;
-  margin-bottom: 20px;
+  color: #555b66;
+  font-size: 14px;
+  font-weight: 500;
+  margin-bottom: 16px;
+}
+
+.footer--top .top--right .footer--banksalad .top--right--sitelink.inline {
+  display: inline-block;
+}
+
+.footer--top .top--right .footer--banksalad .best--span {
+  color: #18cd8c;
+  font-size: 14px;
+  font-weight: 700;
+  margin-left: 4px;
 }
 
 footer .footer--bottom {
   max-width: 946px;
   margin: 92px auto 0;
   padding: 24px 0;
-  border-top: 1px solid silver;
 }
 
 .footer--bottom .policies {
@@ -1304,7 +1319,7 @@ footer .footer--bottom {
 }
 
 .footer--bottom .policies li a {
-  color: #f5f5f5;
+  color: #555b66;
   font-size: 12px;
   font-weight: 300;
   line-height: 12px;
@@ -1316,13 +1331,17 @@ footer .footer--bottom {
 
 .footer--bottom .copyright {
   display: block;
-  margin: 47px 0 0;
-  color: hsla(0,0%,100%,.54);
+  margin: 25px 0 0;
+  color: #888e99;
   font-size: 12px;
-  line-height: 1.34;
+  line-height: 1.6;
   text-align: left;
 }
 
-.footer--bottom .copyright .italic {
-  font-style: italic;
+.footer--bottom .copyright .copyright--title {
+  font-weight: 700;
+}
+
+.footer--bottom .copyright .underline {
+  text-decoration: underline;
 }
